# ai-buildcamp-project-starter

./: README.md  pyproject.toml
notebooks/: 01-setup.ipynb
