[project]
name = "eu-climate-policy-agentic-rag"
version = "0.1.0"
description = "Agentic RAG assistant for EU climate policy documents: retrieves and synthesizes answers from official sources, with web search fallback"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "playwright>=1.59.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
]
